Bug 91444 - regression bisected radeonsi: don't change pipe_resource in resource_copy_region
Summary: regression bisected radeonsi: don't change pipe_resource in resource_copy_region
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Default DRI bug account
QA Contact: Default DRI bug account
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-24 05:46 UTC by Shawn Starr
Modified: 2015-08-02 22:29 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
ARK: Survival Evolved corruption (2.16 MB, image/jpeg)
2015-07-24 05:48 UTC, Shawn Starr
Details

Description Shawn Starr 2015-07-24 05:46:38 UTC
While playing ARK: Survival Evolved, I ran into image corruption and can reproduce it easy in game, it came down to this commit:

commit 46b2b3bda8d962fce02838e09c742ac06fbec45f
Author: Marek Olšák <marek.olsak@amd.com>
Date:   Thu Jul 16 13:17:14 2015 +0200

    radeonsi: don't change pipe_resource in resource_copy_region
    
    Copied from r600g. pipe_resource can be shared by multiple threads, so we
    shouldn't change it.
    
    Reviewed-by: Michel Dänzer <michel.daenzer@amd.com>


Reverting this fixed corruption seen, I've attached a picture of the corruption noticed, but it manifests itself in striped transparency of certain objects.

See attachment of image
Comment 1 Shawn Starr 2015-07-24 05:48:01 UTC
Created attachment 117328 [details]
ARK: Survival Evolved corruption

ARK: Survival Evolved corruption
Comment 2 Shawn Starr 2015-07-24 05:52:51 UTC
This is for BONAIRE (Saturn XT [FirePro M6100])
Comment 3 Marek Olšák 2015-07-24 13:39:16 UTC
Could you please create and attach (or send a link to) an apitrace reproducing the issue?
Comment 4 Shawn Starr 2015-07-24 19:07:18 UTC
Here is the apitrace, decompress with XZ- https://drive.google.com/open?id=0Bze7CJKD12nOYkhrdlZERXBKMDA
Comment 5 Shawn Starr 2015-07-24 20:21:02 UTC
http://www.sh0n.net/spstarr/radeon/player-stat-glyph-corrupt.png - Copy region OK
http://www.sh0n.net/spstarr/radeon/player-stat-glyph-region-corrupt.png - Copy region corruption

There is glyph corruption but this pre-dates this issue and will be a separate bug report.
Comment 6 Shawn Starr 2015-07-28 06:15:27 UTC
Marek's has fixed this in http://cgit.freedesktop.org/~mareko/mesa/commit/?id=21f4eb11d76d45c8b4099e0df36d1263901c39a2

This has been tested, works for me now.
Comment 7 Marek Olšák 2015-08-02 22:29:51 UTC
(In reply to Shawn Starr from comment #6)
> Marek's has fixed this in
> http://cgit.freedesktop.org/~mareko/mesa/commit/
> ?id=21f4eb11d76d45c8b4099e0df36d1263901c39a2
> 
> This has been tested, works for me now.

Closing.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.